# hercule

./: .gitignore  RAPPORTS_HERCULE.md  README.md  REFACTORING_REPORTS.md  config_example.yaml  deep_q_learning_test.yaml  demo_reports.py  execution_example.yaml  mon_rapport_sarsa.py  pyproject.toml  sarsa_test_config.yaml  simple_games.yaml  test_hercule_setup.py  test_training_execution.yaml
.cursor/rules/: hercule-architecture.mdc  hercule-decisions.mdc  hercule-patterns.mdc  hercule-troubleshooting.mdc  main.mdc
experiments/: deep_q_learning_test.yaml  dq_cartpole.yaml  frozenlake_4x4.yaml  frozenlake_8x8.yaml  sarsa_test_config.yaml  simple_games.yaml
src/hercule/: __init__.py
src/hercule/cli/: __init__.py  __main__.py  main.py
src/hercule/config/: __init__.py
src/hercule/controller/: __init__.py
src/hercule/environnements/: __init__.py  spaces_checker.py  validate_discrete_environment.py
src/hercule/models/: __init__.py  epoch_result.py
src/hercule/models/deep_q_learning/: __init__.py
src/hercule/models/dummy/: __init__.py
src/hercule/models/simple_q_learning/: __init__.py
src/hercule/models/simple_sarsa/: README.md  __init__.py
src/hercule/models/td_models/: __init__.py
src/hercule/reports/: README.md  __init__.py  cli.py  example_usage.py
src/hercule/reports/templates/: comparative_report_template.py.j2  report_template.py.j2
src/hercule/run/: README.md  __init__.py  evaluation.py
src/hercule/supervisor/: __init__.py
tests/: conftest.py  test_fixtures.py  test_hercule.py
tests/cli/: __init__.py  test_cli_basic.py
tests/config/: test_config_creation.py  test_config_expansion.py  test_config_yaml.py
tests/environnements/: __init__.py  test_save_load.py
tests/fixtures/: README.md  complex_config.yaml  config_with_lists.yaml  multi_config.yaml  simple_config.yaml
