[project]
name = "hercule"
version = "0.1.0"
description = ""
authors = [
    { name = "guilhem.heinrich", email = "guilhem.heinrich@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "hercule", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pdoc = "*"
tomli = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
gen-doc = "pyscaf.documentation.scripts.parse_doc:gen_doc"
serve-doc = "pyscaf.documentation.scripts.parse_doc:serve_doc"

[tool.pyscaf.documentation]
output_path = "docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.ruff]
src = ["src", "tests"]
select = [
    "B",  # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4", # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",  # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",  # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "N",  # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "W",  # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",  # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
line-length = 120

